Aligned items correctly; Added setTime function

--- a/digits.css
+++ b/digits.css
@@ -2,10 +2,12 @@ span {
   position: absolute;
   background-color: aqua;
   rotate: calc(-1 * var(--rot));
+  width: 2ch;
+  height: 2ch;
+  text-align: center;
 }
 .digits {
-  --circle-size: 500px;
-  --item-size: 30px;
+  --item-size: 2ch;
   position: absolute;
   width: var(--circle-size);
   height: var(--circle-size);
@@ -21,6 +23,7 @@ span {
     position: absolute;
     top: 50%;
     left: 50%;
+    transform-origin: calc(var(--item-size) / 2) calc(var(--item-size) / 2);
   }
 }
 
