--- a/hands.css
+++ b/hands.css
@@ -6,24 +6,20 @@
   position: absolute;
 }
 #minutes {
+  z-index: -2;
   background-color: brown;
-  width: 250px;
-  translate: 250px 255px;
-  height: 8px;
-  transform-origin: 4px 4px;
+  width: 25.4ch;
+  translate: 25.6ch 25.6ch;
+  height: 0.8ch;
+  transform-origin: 0.4ch 0.4ch;
   transform: rotate(25deg);
 }
-/*#minutes.transition {
-  transition: transform 0.1s linear;
-}*/
 #hours {
+  z-index: -1;
   background-color: blue;
-  width: 200px;
-  height: 12px;
-  translate: 250px 255px;
-  transform-origin: 6px 6px;
+  width: 20.6ch;
+  height: 1.2ch;
+  translate: 25.4ch 25.4ch;
+  transform-origin: 0.6ch 0.6ch;
   transform: rotate(25deg);
-}
-/* #hours.transition {
-  transition: transform 0.1s linear;
 }
